force-app/main/default/objects/bofc__BOFCOtherthings__c/fields/bofc__BOFCOBDetails__c.field-meta.xml
<CustomField>
    <fullName>bofc__BOFCOBDetails__c</fullName>
    <label>BOFCOBDetails</label>
    <referenceTo>bofc__BOFCOBDetails__c</referenceTo>
    <relationshipLabel>BOFCOtherthings</relationshipLabel>
    <relationshipName>BOFCOtherthings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>