force-app/main/default/objects/bofc__BOFCOtherthings__c/fields/bofc__errorMessage__c.field-meta.xml
<CustomField>
    <fullName>bofc__errorMessage__c</fullName>
    <label>errorMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>