force-app/main/default/objects/bofc__BOFCOtherthings__c/fields/bofc__TestField__c.field-meta.xml
<CustomField>
    <fullName>bofc__TestField__c</fullName>
    <label>TestField</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>