force-app/main/default/objects/bofc__BOFCOtherthings__c/fields/bofc__Type__c.field-meta.xml
<CustomField>
    <fullName>bofc__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VR</fullName>
            </value>
            <value>
                <fullName>RT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>